--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,10 @@ html, body {
   text-decoration: underline;
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .home__badges {
   align-items: center;
   justify-content: center;
